# DouyTV

./: .gitignore  CLAUDE.md  findings.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  tailwind.config.cjs  task_plan.md  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
docs/: music-module-comparison.md  music-module-improvement-plan.md  音乐源接口调研与待办.md
public/: default-plugins.json
screens/01-product-requirements-screen-list/: code.md  metadata.json
screens/02-design-system/: DESIGN.md  design-system.json  metadata.json
screens/03-短视频首页-中文版/: code.html  metadata.json
screens/04-直播推荐-沉浸式流-优化版/: code.html  metadata.json
screens/05-沉浸式音乐播放-全屏/: code.html  metadata.json
screens/06-视频点播首页/: code.html  metadata.json
screens/07-稍后观看与影单-playlists/: code.html  metadata.json
screens/08-视频详情-选集与多源切换-优化/: code.html  metadata.json
screens/09-视频分类探索/: code.html  metadata.json
screens/10-视频源健康度-scraper-logs/: code.html  metadata.json
screens/11-下载管理-download-manager/: code.html  metadata.json
screens/12-高级播放器交互-playback-ui/: code.html  metadata.json
screens/13-iptv-频道探索/: code.html  metadata.json
screens/14-直播间排行与热门-全平台/: code.html  metadata.json
screens/15-直播首页-平台与频道分类-优化/: code.html  metadata.json
screens/16-直播首页-无顶栏版/: code.html  metadata.json
screens/17-直播搜索结果-多源聚合/: code.html  metadata.json
screens/18-直播详情-互动与清晰度切换/: code.html  metadata.json
screens/19-iptv-节目单与回看-时间轴/: code.html  metadata.json
screens/20-直播播放设置面板-详情配置/: code.html  metadata.json
screens/21-音乐中心-中文版/: code.html  metadata.json
screens/22-歌单详情-赛博脉冲/: code.html  metadata.json
screens/23-音乐播放详情-标准版/: code.html  metadata.json
screens/24-新歌发现-中文版/: code.html  metadata.json
screens/25-音乐排行榜-中文版/: code.html  metadata.json
screens/26-音乐搜索-中文版/: code.html  metadata.json
screens/27-音效调节器-中文版/: code.html  metadata.json
screens/28-沉浸式歌词-中文版/: code.html  metadata.json
screens/29-我的音乐-个人中心/: code.html  metadata.json
screens/30-我的书架-漫画与小说/: code.html  metadata.json
screens/31-漫画小说馆-中文版/: code.html  metadata.json
screens/32-漫画详情-新世纪-x/: code.html  metadata.json
screens/33-阅读排行榜-中文版/: code.html  metadata.json
screens/34-小说阅读器-中文版/: code.html  metadata.json
screens/35-漫画阅读器-沉浸模式/: code.html  metadata.json
screens/36-小说详情-虚空行者/: code.html  metadata.json
screens/37-阅读历史与收藏/: code.html  metadata.json
screens/38-内容分类中心/: code.html  metadata.json
screens/39-数据备份与恢复/: code.html  metadata.json
screens/40-webdav-配置详情/: code.html  metadata.json
screens/41-直播与iptv源配置/: code.html  metadata.json
screens/42-设置中心-增强功能版/: code.html  metadata.json
screens/43-代理服务器设置/: code.html  metadata.json
screens/44-个人中心-用户资料/: code.html  metadata.json
screens/45-直播与-iptv-源管理-专业版/: code.html  metadata.json
screens/46-视频源详细配置/: code.html  metadata.json
screens/47-视频源管理-增强功能版-v2/: code.html  metadata.json
screens/48-github-插件库导入弹窗/: code.html  metadata.json
screens/49-iptv-m3u与epg配置弹窗/: code.html  metadata.json
screens/50-音乐源配置-综合管理版-重构/: code.html  metadata.json
screens/51-内置音乐源配置弹窗/: code.html  metadata.json
screens/52-lx-music-server-配置弹窗/: code.html  metadata.json
screens/53-电子书源管理-增强版/: code.html  metadata.json
screens/54-musicapi-v2-配置弹窗/: code.html  metadata.json
screens/55-musicfree-插件导入弹窗/: code.html  metadata.json
screens/56-手动添加书源弹窗/: code.html  metadata.json
screens/57-漫画源管理-专业聚合版/: code.html  metadata.json
screens/58-opds-源配置弹窗/: code.html  metadata.json
screens/59-legado-一键导入弹窗/: code.html  metadata.json
screens/60-suwayomi-server-配置弹窗/: code.html  metadata.json
screens/61-suwayomi-扩展管理详情/: code.html  metadata.json
screens/62-视频源手动添加弹窗/: code.html  metadata.json
screens/63-漫画源文本导入弹窗/: code.html  metadata.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: README.md  icon.icns
src-tauri/icons/ios/: Contents.json
src-tauri/icons/source/: build.mjs
src-tauri/src/: amateurtv_ws.rs  cf_cookies.rs  fc2_ws.rs  lib.rs  main.rs  mfc_ws.rs  mouflon.rs  music_unblock.rs  netease.rs  sample_aes_proxy.rs  stream_proxy.rs  ts_mp4.rs
src/components/: ErrorBoundary.tsx  MusicChip.tsx  MusicDetailHeader.tsx  MusicEmptyState.tsx  MusicErrorToast.tsx  MusicHeart.tsx  MusicListItem.tsx  MusicLyricView.tsx  MusicPlayAllBar.tsx  MusicSegmentedTab.tsx  WelcomeModal.tsx
src/components/AppDialog/: AppDialog.tsx
src/components/BottomTabBar/: BottomTabBar.tsx
src/components/CountChip/: CountChip.tsx  index.ts
src/components/CoverCard/: CoverCard.tsx  index.ts
src/components/DanmakuPanel/: DanmakuPanel.tsx  index.ts
src/components/DetailHero/: DetailHero.tsx  index.ts
src/components/EmptyState/: EmptyState.tsx
src/components/HotRecommendations/: HotRecommendations.tsx  index.ts
src/components/Icon/: Icon.tsx
src/components/InteractionBar/: InteractionBar.tsx  index.ts
src/components/MediaGrid/: MediaGrid.tsx  index.ts
src/hooks/: useDetail.ts  useFeed.ts  useLiveFeed.ts  useMusicStateBroadcast.ts  useSearch.ts  useUpdater.ts  useViewport.ts
src/lib/: configFile.ts  db.ts  douban.ts  epg.ts  platform.ts  proxy.ts  recommend.ts  sourceImport.ts  thumbnail.ts  vodDownload.ts  vodSourceDiscovery.ts
src/pages/: Browse.tsx  Detail.tsx  Douban.tsx  Duanju.tsx  Home.tsx  Library.tsx  Live.tsx  Local.tsx  Music.tsx  Music.tsx.bak  Play.tsx  Scripts.tsx  Search.tsx  Settings.tsx
src/source-script/: builtin.ts  cache.ts  cms.ts  context.ts  fetch.ts  html.ts  index.ts  log.ts  runtime.ts  types.ts  utils.ts
src/stores/: books.ts  configSubscription.ts  danmaku.ts  downloadSettings.ts  epg.ts  library.ts  live.ts  liveSubscription.ts  localVideos.ts  manga.ts  mangasource.ts  music.ts  musicDownload.ts  musicLocal.ts  netlive.ts  netliveExternalPlugins.ts  netliveList.ts  netlivePluginSubscription.ts  netliveProxy.ts  novelsource.ts  proxy.ts  scripts.ts  sync.ts  vodAssets.ts
src/types/: media.ts
(+214 files in other folders)
