[package]
name = "douytv"
version = "1.0.1"
description = "MoonTV-style cross-platform media client built with Tauri v2"
authors = ["GAONX6"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "douytv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
# HTTP client for source-script ctx.fetch (绕过 webview CORS)。
# 使用 ureq 2.x 避免引入 reqwest -> encoding_rs (与 rustc 1.95 不兼容)
ureq = { version = "2.12", features = ["json", "tls"], default-features = false }
# HTTP/2 client —— 仅给抖音用（live.douyin.com 强制 HTTP/2 + ALPN h2，ureq 1.x 无法握手）。
# default-features=false 避开 encoding_rs。tauri-plugin-updater 已经传递性依赖了 reqwest 0.13.x，
# 共享同版本不会增加 binary size。
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "json"] }

# 本地流式 HTTP 代理 —— 用于 FLV 直播（Douyu/Huya/Douyin），
# Tauri 自定义 URI scheme 不支持 chunked streaming，必须用真正的 hyper server。
hyper = { version = "1", default-features = false, features = ["server", "http1"] }
hyper-util = { version = "0.1", default-features = false, features = ["server", "http1", "tokio"] }
http-body-util = "0.1"
tokio = { version = "1", default-features = false, features = ["net", "rt", "sync", "io-util"] }
tokio-stream = { version = "0.1", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
bytes = "1"

# 桌面端：系统代理检测 + 自动更新；移动端用 cfg(not(any(target_os = "android", target_os = "ios"))) 编译时排除
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
sysproxy = "0.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
